--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
     <!-- header -->
     <div class="container" ng-include="'views/main.html'"></div>
 
-    <div id="game-container">
+    <!-- <div id="game-container">
     <div grid ng-model='ctrl.game' class="row"></div>
-    </div>
+    </div> -->
 
     <!-- script tags -->
     <script src="bower_components/angular/angular.js"></script>
@@ -20,5 +20,6 @@
     <script src="scripts/game/game.js"></script>
     <script src="scripts/grid/grid.js"></script>
     <script src="scripts/grid/grid_directive.js"></script>
+    <script src="scripts/grid/tile_directive.js"></script>
   </body>
 </html>
