--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,10 @@
     <!-- script tags -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/game/game.js"></script>
     <script src="scripts/grid/grid.js"></script>
     <script src="scripts/grid/grid_directive.js"></script>
     <script src="scripts/grid/tile_directive.js"></script>
+    <script src="scripts/keyboard/keyboard.js"></script>
+    <script src="scripts/game/game.js"></script>
   </body>
 </html>
