--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
 
     <!-- script tags -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/grid/grid.js"></script>
     <script src="scripts/grid/grid_directive.js"></script>
